--- a/index.html
+++ b/index.html
@@ -4,172 +4,11 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>J. Random Hacker</title>
+  <title>Brent Guistwite</title>
   <link rel="stylesheet" type="text/css" href="./styles.css">
 </head>
-
-<body>
-  <header>
-    <h1>J. Random Hacker</h1>
-    <nav class="main-nav">
-      <ul>
-        <li class="main-nav-link">
-          <a href="#about">About me</a>
-        </li>
-        <li class="main-nav-link">
-          <a href="#work">My work</a>
-        </li>
-        <li class="main-nav-link">
-          <a href="#contact">Contact me</a>
-        </li>
-      </ul>
-    </nav>
-
-    <img class="headshot" src="http://unsplash.it/150/150" alt="J. Random Hacker headshot">
-
-    <p class="about" id="about">
-      Hi, I'm J. Random Hacker, a full-stack web developer from Nowheresville, USA. I use React and Node.js to build web apps which
-      leave you with a minty fresh taste in your mouth. Outside of coding I enjoy watching
-      <a href="https://www.youtube.com/watch?v=6SFNW5F8K9Y">this video</a> on repeat.
-    </p>
-    <nav class="contact-links">
-      <ul>
-        <li class="contact-link contact-link-email">
-          <a href="mailto:jrandomhacker@example.com">Email</a>
-          <li class="contact-link contact-link-linkedin">
-            <a href="https://www.linkedin.com">LinkedIn</a>
-            <li class="contact-link contact-link-github">
-              <a href="https://www.github.com">GitHub</a>
-      </ul>
-    </nav>
-  </header>
-  <section class="work" id="work">
-    <h2>My work</h2>
-    <section class="project">
-      <h3>Frobnicator</h3>
-      <img class="project-image" src="http://unsplash.it/350/150?random&amp;bust=1" alt="Frobnicator screenshot">
-      <p class="project-description">
-        A frob which allows you to frobnicate other frobs.
-      </p>
-      <ul class="project-stack">
-        <li class="project-stack-item">
-          React
-        </li>
-        <li class="project-stack-item">
-          Redux
-        </li>
-        <li class="project-stack-item">
-          Node.js
-        </li>
-      </ul>
-      <nav class="project-links">
-        <ul>
-          <li class="project-link project-link-live">
-            <a href="#">Live demo</a>
-          </li>
-          <li class="project-link project-link-github">
-            <a href="#">Source code</a>
-          </li>
-        </ul>
-      </nav>
-    </section>
-    <section class="project">
-      <h3>FooBar</h3>
-      <img class="project-image" src="http://unsplash.it/350/150?random&amp;bust=2" alt="FooBar screenshot">
-      <p class="project-description">
-        A foo which allows you to bar other bazes.
-      </p>
-      <ul class="project-stack">
-        <li class="project-stack-item">
-          React
-        </li>
-        <li class="project-stack-item">
-          Redux
-        </li>
-        <li class="project-stack-item">
-          Node.js
-        </li>
-      </ul>
-      <nav class="project-links">
-        <ul>
-          <li class="project-link project-link-live">
-            <a href="#">Live demo</a>
-          </li>
-          <li class="project-link project-link-github">
-            <a href="#">Source code</a>
-          </li>
-        </ul>
-      </nav>
-    </section>
-    <section class="project">
-      <h3>AliceBob</h3>
-      <img class="project-image" src="http://unsplash.it/350/150?random&amp;bust=3" alt="AliceBob screenshot">
-      <p class="project-description">
-        An Alice which allows you to Bob other Eves.
-      </p>
-      <ul class="project-stack">
-        <li class="project-stack-item">
-          React
-        </li>
-        <li class="project-stack-item">
-          Redux
-        </li>
-        <li class="project-stack-item">
-          Node.js
-        </li>
-      </ul>
-      <nav class="project-links">
-        <ul>
-          <li class="project-link project-link-live">
-            <a href="#">Live demo</a>
-          </li>
-          <li class="project-link project-link-github">
-            <a href="#">Source code</a>
-          </li>
-        </ul>
-      </nav>
-    </section>
-    <section class="project">
-      <h3>Wibble</h3>
-      <img class="project-image" src="http://unsplash.it/350/150?random&amp;bust=4" alt="Wibble screenshot">
-      <p class="project-description">
-        A wibble which allows you to wobble other wubbles.
-      </p>
-      <ul class="project-stack">
-        <li class="project-stack-item">
-          React
-        </li>
-        <li class="project-stack-item">
-          Redux
-        </li>
-        <li class="project-stack-item">
-          Node.js
-        </li>
-      </ul>
-      <nav class="project-links">
-        <ul>
-          <li class="project-link project-link-live">
-            <a href="#">Live demo</a>
-          </li>
-          <li class="project-link project-link-github">
-            <a href="#">Source code</a>
-          </li>
-        </ul>
-      </nav>
-    </section>
-  </section>
-  <section class="contact" id="contact">
-    <h2>Contact me</h2>
-    <form action="https://formspree.io/jrandomhacker@example.com" method="POST">
-      <label for="contact-form-name">Your Name</label>
-      <input type="text" name="name" id="contact-form-name" placeholder="Grace Hopper">
-      <label for="contact-form-email">Your Email Address</label>
-      <input type="email" name="_replyto" id="contact-form-email" placeholder="grace@example.com">
-      <label for="contact-form-message">Message</label>
-      <textarea name="message" id="contact-form-message"></textarea>
-      <input type="submit" value="Send message">
-    </form>
-  </section>
+<body> 
+  
   <script src="http://code.jquery.com/jquery-3.3.1.min.js"
     integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
     crossorigin="anonymous">
@@ -179,4 +18,3 @@
 </body>
 
 </html>
-© 2018 GitHub, Inc. Terms Privacy Security Status Help Contact GitHub API Training Shop Blog About
