--- a/index.html
+++ b/index.html
@@ -5,10 +5,43 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Brent Guistwite</title>
+  <link href="https://fonts.googleapis.com/css?family=Abril+Fatface|Open+Sans" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="./styles.css">
 </head>
-<body> 
-  
+<body>
+  <div id="wrapper">
+    <header id="header">
+      <div class="logo-container">
+      </div>
+      <hr class="line">
+
+      <div class="content">
+        <div class="inner">
+          <h1>
+            I'm Brent Guistwite
+          </h1>
+          <p>
+            A touring musician turned full-stack
+            web developer from Gainesville, FL.
+          </p>
+        </div>
+      </div>
+      <nav class="bottom-nav">
+        <hr class="line">
+        <ul>
+          <li>
+           <a href="#">My Story</a> 
+          </li>
+          <li>
+            <a href="#">Portfolio</a>
+          </li>
+          <li>
+            <a href="#">Contact</a>
+          </li>
+        </ul>
+      </nav>
+    </header>
+  </div>
   <script src="http://code.jquery.com/jquery-3.3.1.min.js"
     integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
     crossorigin="anonymous">
