add bottom nav buttons

--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
           </p>
         </div>
       </div>
+      <hr class="line">
       <nav class="bottom-nav">
-        <hr class="line">
         <ul>
           <li>
-           <a href="#">My Story</a> 
+           <a href="#">About</a> 
           </li>
           <li>
             <a href="#">Portfolio</a>
@@ -38,6 +38,7 @@
           <li>
             <a href="#">Contact</a>
           </li>
+          
         </ul>
       </nav>
     </header>
