add finishing touches on css for static file

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header id="header">
       <div class="logo-container">
       </div>
-      <hr class="line">
+      <hr class="top line">
 
       <div class="content">
         <div class="inner">
