event listeners wired up

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           <h1>
             I'm Brent Guistwite
           </h1>
-          <p>
+          <p class="short-bio">
             A touring musician turned full-stack
             web developer from Gainesville, FL.
           </p>
@@ -30,13 +30,13 @@
       <nav class="bottom-nav">
         <ul>
           <li>
-           <a href="#">About</a> 
+           <a class="about" href="#">About</a> 
           </li>
           <li>
-            <a href="#">Portfolio</a>
+            <a class="portfolio" href="#">Portfolio</a>
           </li>
           <li>
-            <a href="#">Contact</a>
+            <a class="contact" href="#">Contact</a>
           </li>
           
         </ul>
