add blur class for modals

--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
       <nav class="bottom-nav">
         <ul>
           <li>
-           <a class="about" href="#">About</a> 
+           <a class="about" href="#about">About</a> 
           </li>
           <li>
-            <a class="portfolio" href="#">Portfolio</a>
+            <a class="portfolio" href="#portfolio">Portfolio</a>
           </li>
           <li>
-            <a class="contact" href="#">Contact</a>
+            <a class="contact" href="#contact">Contact</a>
           </li>
           
         </ul>
