move jquery dom elements to index html file

--- a/index.html
+++ b/index.html
@@ -10,11 +10,60 @@
 </head>
 <body>
   <div id="wrapper">
+    <div class="about modal hidden">
+      <article id="about-content">
+          <img class="go-back" src="./images/colored.png">
+          <h2>about</h2>
+        <span>
+          <img class="about-image" src="./images/about-photo.jpg">
+        </span>
+        <p>
+         I am a web developer and recent graduate of the Front End Web Development Career Path bootcamp at Thinkful.I love coding
+        because solving problems and seeing ideas come to life on the page is supremely satisfying.I geek out on higher order functions,
+        finding and learning awesome libraries or frameworks, and getting front and back ends to play nicely. When Im not coding,
+        Im often found on Skype working with clients, curled up in a cozy chair reading, hiking in a canyon, or upside down doing
+        a headstand.I am lifelong learner and my current learning projects include piano and writing my first book.
+        </p>
+      </article>
+    </div>
+    <div class="portfolio modal hidden">
+      <article id="portfolio-content">
+        <img class="go-back" src="./images/colored.png">
+        <h2>portfolio</h2>
+        <span>
+          <img class="about-image" src="./images/about-photo.jpg">
+        </span>
+        <p>
+          I am a web developer and recent graduate of the Front End Web Development Career Path bootcamp at Thinkful.I love coding
+          because solving problems and seeing ideas come to life on the page is supremely satisfying.I geek out on higher order
+          functions, finding and learning awesome libraries or frameworks, and getting front and back ends to play nicely. When
+          Im not coding, Im often found on Skype working with clients, curled up in a cozy chair reading, hiking in a canyon,
+          or upside down doing a headstand.I am lifelong learner and my current learning projects include piano and writing my
+          first book.
+        </p>
+      </article>
+    </div>
+    <div class="contact modal hidden">
+      <article id="contact-content">
+        <img class="go-back" src="./images/colored.png">
+        <h2>about</h2>
+        <span>
+          <img class="about-image" src="./images/about-photo.jpg">
+        </span>
+        <p>
+          I am a web developer and recent graduate of the Front End Web Development Career Path bootcamp at Thinkful.I love coding
+          because solving problems and seeing ideas come to life on the page is supremely satisfying.I geek out on higher order
+          functions, finding and learning awesome libraries or frameworks, and getting front and back ends to play nicely. When
+          Im not coding, Im often found on Skype working with clients, curled up in a cozy chair reading, hiking in a canyon,
+          or upside down doing a headstand.I am lifelong learner and my current learning projects include piano and writing my
+          first book.
+        </p>
+      </article>
+    </div>
     <header id="header">
       <div class="logo-container">
       </div>
       <hr class="top line">
-
       <div class="content">
         <div class="inner">
           <h1>
@@ -30,13 +79,13 @@
       <nav class="bottom-nav">
         <ul>
           <li>
-           <a class="about" href="#about">About</a> 
+           <a class="about-box" href="#about">About</a> 
           </li>
           <li>
-            <a class="portfolio" href="#portfolio">Portfolio</a>
+            <a class="portfolio-box" href="#portfolio">Portfolio</a>
           </li>
           <li>
-            <a class="contact" href="#contact">Contact</a>
+            <a class="contact-box" href="#contact">Contact</a>
           </li>
           
         </ul>
