add logos to contact page. next change content on the pages

--- a/index.html
+++ b/index.html
@@ -46,18 +46,21 @@
     <div class="contact modal hidden">
       <article id="contact-content">
         <img class="go-back" src="./images/colored.png">
-        <h2>about</h2>
+        <h2>contact</h2>
         <span>
           <img class="about-image" src="./images/about-photo.jpg">
         </span>
-        <p>
-          I am a web developer and recent graduate of the Front End Web Development Career Path bootcamp at Thinkful.I love coding
-          because solving problems and seeing ideas come to life on the page is supremely satisfying.I geek out on higher order
-          functions, finding and learning awesome libraries or frameworks, and getting front and back ends to play nicely. When
-          Im not coding, Im often found on Skype working with clients, curled up in a cozy chair reading, hiking in a canyon,
-          or upside down doing a headstand.I am lifelong learner and my current learning projects include piano and writing my
-          first book.
-        </p>
+         <ul class="contact-links">
+          <li>
+            <img src="./images/gh.png"> 
+          </li>
+          <li>
+            <img src="./images/linkedin.png">
+          </li>
+          <li>
+            <img src="./images/email.png">
+          </li>
+        </ul>
       </article>
     </div>
     <header id="header">
