add lorem ipsum text

--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
           <img class="about-image" src="./images/about-photo.jpg">
         </span>
         <p>
-         I am a web developer and recent graduate of the Front End Web Development Career Path bootcamp at Thinkful.I love coding
-        because solving problems and seeing ideas come to life on the page is supremely satisfying.I geek out on higher order functions,
-        finding and learning awesome libraries or frameworks, and getting front and back ends to play nicely. When Im not coding,
-        Im often found on Skype working with clients, curled up in a cozy chair reading, hiking in a canyon, or upside down doing
-        a headstand.I am lifelong learner and my current learning projects include piano and writing my first book.
-        </p>
+          Lorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem Ipsum
+          Lorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem Ipsum
+          Lorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem Ipsum
+          Lorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem Ipsum
+          Lorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem Ipsum
+            </p>
       </article>
     </div>
     <div class="portfolio modal hidden">
@@ -34,12 +34,11 @@
           <img class="about-image" src="./images/about-photo.jpg">
         </span>
         <p>
-          I am a web developer and recent graduate of the Front End Web Development Career Path bootcamp at Thinkful.I love coding
-          because solving problems and seeing ideas come to life on the page is supremely satisfying.I geek out on higher order
-          functions, finding and learning awesome libraries or frameworks, and getting front and back ends to play nicely. When
-          Im not coding, Im often found on Skype working with clients, curled up in a cozy chair reading, hiking in a canyon,
-          or upside down doing a headstand.I am lifelong learner and my current learning projects include piano and writing my
-          first book.
+          Lorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem Ipsum
+          Lorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem Ipsum
+          Lorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem Ipsum
+          Lorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem Ipsum
+          Lorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem Ipsum
         </p>
       </article>
     </div>
